@@ -1,6 +1,6 @@
-# $Id: Makefile.am,v 1.1 1999/04/22 02:48:26 ssb Exp $
+# $Id: Makefile.am,v 1.2 1999/08/13 00:14:15 zeev Exp $
 
 INCLUDES=@INCLUDES@ -I@top_srcdir@ -I@top_srcdir@/libzend
 noinst_LIBRARIES=libphpext_sybase.a
-libphpext_sybase_a_SOURCES=sybase.c sybase-ct.c
+libphpext_sybase_a_SOURCES=sybase.c
 
