@@ -1,0 +1,6 @@
+# $Id: Makefile.am,v 1.1 1999/08/13 00:14:16 zeev Exp $
+
+INCLUDES=@INCLUDES@ -I@top_srcdir@ -I@top_srcdir@/libzend
+noinst_LIBRARIES=libphpext_sybase_ct.a
+libphpext_sybase_ct_a_SOURCES=php_sybase_ct.c
+
