@@ -1,0 +1,6 @@
+# $Source: /repository/php-src/ext/sybase_ct/Attic/setup.stub,v $
+# $Id: setup.stub,v 1.1 1999/08/13 00:14:16 zeev Exp $
+
+define_option with-sybase-ct 'Sybase-CT support?' yesnodir \
+    'no /home/sybase Sybase-CT install' \
+'     Whether to build PHP with Sybase-CT support.'
