@@ -1,6 +1,9 @@
 PHP 4.0 CHANGE LOG                                                    ChangeLog
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
+?? ?? 1999, Version 4.0 Beta 3
+- Fixed Sybase CT build process (Zeev)
+
 August 9 1999, Version 4.0 Beta 2
 - Fixed a problem when sending HTTP/1.x header lines using header() (Zeev)
 - Win32 builds now include the ODBC module built-in (Zeev)
